# point-cloud-alignment

./: .gitignore  .~lock.midterm_presentation.odp#  README.md  midterm_presentation.odp  quicknotes.txt
PointCloudAlignement/PointCloudAlignment/: CMakeLists.txt  main.cpp  make_test_set.cpp  run_test_set.cpp
PointCloudAlignement/PointCloudAlignment/include/: common.h  mesh_segmentation.h  normal_computation.h  pfh_evaluation.h  plane.h  plane_merging.h  plane_segmentation.h  point_normal_k.h  registration.h  segmented_points_container.h  test_set.h  variables.h
PointCloudAlignement/PointCloudAlignment/src/: mesh_segmentation.cpp  normal_computation.cpp  pfh_evaluation.cpp  plane.cpp  plane_merging.cpp  plane_segmentation.cpp  registration.cpp  segmented_planes_container.cpp  segmented_points_container.cpp  test_parser.cpp  test_set.cpp
Report/: .~lock.statistics.ods#  statistics.ods
Scripts/: cloud_normals.txt  delaunay  delaunay_triangulation.cpp  plot_vectors.py  points.txt  surf_del.m
State_of_the_art_testing/PCL/cloud_alignment/: CMakeLists.txt  feature_cloud.h  main.cpp  template_alignment.h
State_of_the_art_testing/PCL/cloud_alignment-build/: CMakeCache.txt  cloud_alignment.cbp  cmake_install.cmake
State_of_the_art_testing/PCL/cloud_alignment/samples/: 2009geneve1safe.ply  2009geneve1safeTarget.ply  object_template_0.pcd  object_template_1.pcd  object_template_2.pcd  object_template_3.pcd  object_template_4.pcd  object_template_5.pcd
TestPCLKdTree/: CMakeLists.txt  main.cpp
code/PointCloudAlignment/: main.cpp  make_test_set.cpp  run_test_set.cpp
code/PointCloudAlignment/include/: normal_computation.h  pfh_evaluation.h  plane_merging.h  segmented_points_container.h  test_parser.h  variables.h
code/PointCloudAlignment/src/: normal_computation.cpp  pfh_evaluation.cpp  plane.cpp  segmented_points_container.cpp  test_set.cpp
